<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    >

    <TextView
        android:id="@+id/head1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account"
        style="@style/bold_tx"
        android:layout_marginTop="20pt"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textSize="12pt"
        android:layout_below="@+id/img_logo"
        />

    <ScrollView
        android:id="@+id/scrllview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10pt"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_below="@+id/head1"
        >

        <LinearLayout
            android:id="@+id/Linr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="20pt"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <Button
                    android:id="@+id/button_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button"
                    android:layout_marginTop="18dp"
                    android:textAllCaps="false"
                    android:text="@string/signup_email"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:drawableLeft="@drawable/email_color"
                    android:drawablePadding="2dip"
                    android:paddingLeft="70dip"
                    android:paddingRight="60dip"
                    android:singleLine="true"
                    android:gravity="center"
                    style="@style/tx_vu"
                    />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20pt"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.66dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/txor"
                    android:layout_marginTop="12pt"
                    android:layout_marginLeft="5dp"
                    />

                <TextView
                    android:id="@+id/txor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="9pt"
                    android:text="or"
                    android:gravity="center"
                    android:textColor="@color/white"
                    style="@style/tx_vu"
                    android:layout_centerHorizontal="true"
                    android:padding="3dp"
                    android:lineSpacingExtra="10dp"
                    android:layout_marginTop="10dp"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.66dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_toLeftOf="@+id/txor"
                    android:layout_marginTop="12pt"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />


            </RelativeLayout>
            <Button
                android:id="@+id/button_gmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:layout_marginTop="25pt"
                android:textAllCaps="false"
                android:text="@string/signup_gogle"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:drawableLeft="@drawable/google_icon"
                android:drawablePadding="2dip"
                android:paddingLeft="70dip"
                android:paddingRight="60dip"
                android:singleLine="true"
                android:gravity="center"
                style="@style/tx_vu"
                />

            <Button
                android:id="@+id/button_fb"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:text="@string/signup_fb"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:drawableLeft="@drawable/facebook"
                android:drawablePadding="2dip"
                android:paddingLeft="70dip"
                android:paddingRight="60dip"
                android:singleLine="true"
                android:gravity="center"
                style="@style/tx_vu"
                />

            <TextView
                android:id="@+id/new_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Have an account? Sign in"
                style="@style/bold_tx"
                android:layout_marginTop="20pt"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="8pt"
                android:gravity="center"
                android:layout_below="@+id/img_logo"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="6pt"
            android:text="@string/agree"
            android:textColor="@color/white"
            style="@style/tx_vu"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="6pt"
            android:text="@string/terms"
            android:textColor="@color/white"
            style="@style/tx_vu"
            android:layout_marginLeft="3dp"
            />
    </LinearLayout>

</RelativeLayout>